---------------------------------------
2.2 Beta 2  2013-05-10
---------------------------------------
- phone number will show only when selected by the user as the way to contact (chefry/mamba)
-


---------------------------------------
2.2 Beta 1  2013-03-13
---------------------------------------

- Converted to XOOPS 2.5.5 Admin GUI (mamba)
- fixed minor bugs (cesag/mamba)
- add: dynamic configuration of Text Editors in Preferences

#################################################

-------------------------------------------------
Version: 2.1 beta
Date:    25.05.2011
-------------------------------------------------
- Activation / désactivation du menu
- Activation des liens Bookmark
( choix possible entre plusieurs style de Bookmark )
- Activation / désactivation du Flux Rss
- Flux RSS Pour chaque Catégories
- Page Print en nofolow.
- Certains liens sur la page viewads en rel"nofolow" ( sendfriend, print, .. )
- Ajout dans le menu de rel»nofolow» sur certains liens pour éviter l’indexation.
- Refonte du Template des annonces
- GeoMaps Google dans l'annonce avec un Marqueur
- Hack pour le module Xpayment ( permets d'activer le paiement en ligne avec le module Xpaiment )*
- Le menu est maintenant dans un seul fichier
- Début d'amélioration des Tables SQL
- Traduction en italien, portugais du brésil et polonais
+ petites corrections du code source (plus léger, plus rapide, mieux présenté).
+ Optimisations des fichiers languages (French) 
pour gagner encore un peu en temps d'affichage

#################################################

-------------------------------------------------
Version: 1.06
Date:    09.05.2010
-------------------------------------------------
- La partie Admin a été revue. 
- Certaines parties du code a était améliorer
+ traduction Néerlandais

#################################################

-------------------------------------------------
Version: 1.055
Date:    01.05.2010
-------------------------------------------------